--- a/client-android/MatLedControl/app/src/main/res/menu/activity_main_drawer.xml
+++ b/client-android/MatLedControl/app/src/main/res/menu/activity_main_drawer.xml
@@ -2,8 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/choose_server"
-        android:icon="@drawable/ic_menu_send"
+        android:icon="@drawable/ic_menu_manage"
         android:title="@string/choose_server" />
+    <item
+        android:id="@+id/print_tester"
+        android:icon="@drawable/ic_menu_send"
+        android:title="@string/print_tester_debug" />
     <item
         android:id="@+id/simple_drawing"
         android:icon="@drawable/ic_menu_gallery"
