--- a/client-android/MatLedControl/app/src/main/res/layout/fragment_print.xml
+++ b/client-android/MatLedControl/app/src/main/res/layout/fragment_print.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="de.oerntec.matledcontrol.PrintFragment">
+    tools:context="de.oerntec.matledcontrol.script_clients.EchoFragment">
 
     <EditText
         android:id="@+id/print_tester_send_to_server_edittext"
