--- a/client-android/MatLedControl/app/src/main/res/menu/activity_main_drawer.xml
+++ b/client-android/MatLedControl/app/src/main/res/menu/activity_main_drawer.xml
@@ -12,4 +12,8 @@
         android:id="@+id/simple_drawing"
         android:icon="@drawable/ic_menu_gallery"
         android:title="@string/simple_drawing" />
+    <item
+        android:id="@+id/camera"
+        android:icon="@drawable/ic_menu_camera"
+        android:title="@string/camera" />
 </menu>
