--- a/client-android/MatLedControl/app/src/main/res/layout/fragment_manual_script_load.xml
+++ b/client-android/MatLedControl/app/src/main/res/layout/fragment_manual_script_load.xml
@@ -8,7 +8,7 @@
     <!-- TODO: Update blank fragment layout -->
 
     <ProgressBar
-        android:id="@+id/progressBar"
+        android:id="@+id/fragment_manual_script_load_querying_spinner"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -23,7 +23,7 @@
         app:layout_constraintLeft_toLeftOf="@+id/fragment_manual_script_load_list" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/fragment_manual_script_load_querying_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
