--- a/client-android/MatLedControl/app/src/main/res/layout/fragment_scrolling_text.xml
+++ b/client-android/MatLedControl/app/src/main/res/layout/fragment_scrolling_text.xml
@@ -41,7 +41,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
-        android:text="Scrolling speed"
+        android:text="@string/scrolling_speed"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fragment_scrolling_text_text_edit" />
 
@@ -49,26 +49,27 @@
         android:id="@+id/fragment_scrolling_text_color_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:text="choose color"
-        app:layout_constraintBottom_toTopOf="@+id/fragment_scrolling_text_send_text_button"
+        android:text="@string/choose_color"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/fragment_scrolling_text_font_size" />
 
     <Button
         android:id="@+id/fragment_scrolling_text_send_text_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:text="send text"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="@string/send_text"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/fragment_scrolling_text_color_button" />
 
     <TextView
         android:id="@+id/textView3"
@@ -76,7 +77,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
-        android:text="Font size"
+        android:text="@string/font_size"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fragment_scrolling_text_seekbar" />
 
