adapting to new strigns

--- a/client-android/MatLedControl/app/src/main/res/menu/activity_main_drawer.xml
+++ b/client-android/MatLedControl/app/src/main/res/menu/activity_main_drawer.xml
@@ -27,5 +27,5 @@
     <item
         android:id="@+id/log_viewer"
         android:icon="@drawable/ic_log"
-        android:title="@string/view_matrix_log" />
+        android:title="@string/view_device_log" />
 </menu>
