working on wordclock drawingview

--- a/client-android/MatLedControl/app/src/main/res/menu/activity_main_drawer.xml
+++ b/client-android/MatLedControl/app/src/main/res/menu/activity_main_drawer.xml
@@ -17,6 +17,10 @@
         android:icon="@drawable/ic_menu_camera"
         android:title="@string/camera" />
     <item
+        android:id="@+id/wordclock_color_selection"
+        android:icon="@android:drawable/ic_lock_idle_low_battery"
+        android:title="@string/wordclock_color_selection" />
+    <item
         android:id="@+id/manual_script_load"
         android:icon="@drawable/ic_load_script"
         android:title="@string/manual_script_load" />
