--- a/client-android/MatLedControl/app/src/main/res/layout/fragment_wordclock.xml
+++ b/client-android/MatLedControl/app/src/main/res/layout/fragment_wordclock.xml
@@ -38,7 +38,7 @@
         android:id="@+id/fragment_wordclock_drawing_view"
         class="de.oerntec.matledcontrol.script_clients.wordclock.DrawingView"
         android:layout_width="0dp"
-        android:layout_height="439dp"
+        android:layout_height="0dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
@@ -46,6 +46,10 @@
         android:layout_marginTop="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/fragment_wordclock_choose_color_button"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintVertical_bias="0.0" />
 
 </android.support.constraint.ConstraintLayout>
