--- a/client-android/MatLedControl/app/src/main/res/layout/fragment_wordclock_settings.xml
+++ b/client-android/MatLedControl/app/src/main/res/layout/fragment_wordclock_settings.xml
@@ -8,11 +8,14 @@
 
     <CheckBox
         android:id="@+id/settings_enable_display_time_limits"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:checked="true"
         android:layout_marginTop="8dp"
         android:text="@string/enable_display_time_limits"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -76,4 +79,29 @@
 
 
     </android.support.constraint.ConstraintLayout>
+
+    <CheckBox
+        android:id="@+id/wordclock_settings_randomization_enabled"
+        android:text="@string/randomly_choose_colors"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:checked="true"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/settings_display_time_limits_layout" />
+
+    <Spinner
+        android:id="@+id/wordclock_settings_randomization_interval_spinner"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="40dp"
+        android:entries="@array/randomization_intervals"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/wordclock_settings_randomization_enabled" />
 </android.support.constraint.ConstraintLayout>
