matrix list item margin improvement

--- a/client-android/MatLedControl/app/src/main/res/layout/matrix_list_item.xml
+++ b/client-android/MatLedControl/app/src/main/res/layout/matrix_list_item.xml
@@ -9,9 +9,8 @@
     <TextView
         android:id="@+id/large_text"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="31dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="0dp"
         android:text="TextView"
         android:textAppearance="@android:style/TextAppearance.Material.Large"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -22,13 +21,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginTop="2dp"
         android:text="TextView"
         android:textAppearance="@android:style/TextAppearance.Material.Small"
         app:layout_constraintBottom_toBottomOf="@+id/button"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintVertical_bias="0.333" />
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <Button
         android:id="@+id/button"
