--- a/client-android/MatLedControl/app/src/main/res/layout/fragment_wakeup_light_settings.xml
+++ b/client-android/MatLedControl/app/src/main/res/layout/fragment_wakeup_light_settings.xml
@@ -1,15 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TimePicker
-        style="@style/TimePickerTheme"
         android:id="@+id/wakeup_light_time_picker"
-        android:layout_width="wrap_content"
+        style="@style/TimePickerTheme"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -17,6 +15,7 @@
 
     <Spinner
         android:id="@+id/wakeup_light_blendin_duration_spinner"
+        android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
