allow the choice of color temperature

--- a/client-android/MatLedControl/app/src/main/res/layout/fragment_wakeup_light_settings.xml
+++ b/client-android/MatLedControl/app/src/main/res/layout/fragment_wakeup_light_settings.xml
@@ -32,10 +32,31 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:text="@string/send"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <SeekBar
+        android:id="@+id/wakeup_light_color_temperature_seekbar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:max="6600"
+        android:progress="2000"
+        app:layout_constraintEnd_toStartOf="@+id/wakeup_light_color_temperature_text_view"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/wakeup_light_blendin_duration_spinner" />
+
+    <TextView
+        android:id="@+id/wakeup_light_color_temperature_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        android:text="2000K"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/wakeup_light_blendin_duration_spinner" />
 </android.support.constraint.ConstraintLayout>
