--- a/client-android/MatLedControl/app/src/main/res/menu/activity_main_drawer.xml
+++ b/client-android/MatLedControl/app/src/main/res/menu/activity_main_drawer.xml
@@ -14,6 +14,7 @@
         android:title="@string/scrolling_text" />
     <item
         android:id="@+id/camera"
+        android:visible="false"
         android:icon="@drawable/ic_menu_camera"
         android:title="@string/camera" />
     <item
